--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,15 @@ div .container{
 	height: 150px;
 }
 
+@media(max-width: 700px){
+	.contacts{
+		display: block;
+		height: 100vh;
+		width: 200px;
+
+	}
+}
+
 /*-----carts----*/
 
 .carts{
@@ -397,6 +406,21 @@ span{
 	line-height: 28px;
 	font-size: 18px;
 	margin-bottom: 45px;
+}
+
+@media(max-width: 700px){
+	.about{
+		font-size: 20px;
+		height: 120vh;
+		width: 100%;
+		text-align: center;
+	}
+	.about-main img{
+		float: left;
+		height: 150px;
+		width: 150px;
+		position: relative;
+	}
 }
 
 
